--- a/src/css/main.css
+++ b/src/css/main.css
@@ -54,4 +54,65 @@ button {
   line-height: 14px;
   letter-spacing: 2px;
   margin-left: 42px;
+}
+
+.hero {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 1111px;
+  height: 640px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: #E7816B;
+  margin-bottom: 160px;
+}
+.hero-box {
+  padding: 145px 0 0 95px;
+}
+.hero-title {
+  width: 600px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 48px;
+  margin-bottom: 11px;
+}
+.hero-text {
+  width: 445px;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 40px;
+}
+.hero-btn {
+  padding: 18px 24px;
+  color: #333136;
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border: none;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: #FFF;
+}
+.hero-box-2 {
+  position: absolute;
+  left: 42%;
+  width: 640px;
+  height: 640px;
+  flex-shrink: 0;
+  border-radius: 640px;
+  opacity: 0.3089;
+  background: linear-gradient(90deg, rgba(93, 2, 2, 0) 0%, rgba(93, 2, 2, 0.5) 100%);
 }/*# sourceMappingURL=main.css.map */
