--- a/src/css/main.css
+++ b/src/css/main.css
@@ -193,4 +193,53 @@ button {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+}
+
+.project-2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1111px;
+  height: 292px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: #E7816B;
+}
+.project-2-box {
+  padding: 72px 0 122px 95px;
+}
+.project-2-title {
+  width: 268px;
+  height: 98px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px;
+}
+.project-2-text {
+  width: 459px;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+.project-2-btn {
+  padding: 17px 19px;
+  border: none;
+  color: #333136;
+  border-radius: 8px;
+  background: #FFF;
+  font-family: Jost;
+  font-size: 15px;
+  font-style: normal;
+  margin-right: 95px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }/*# sourceMappingURL=main.css.map */
