--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -196,6 +197,9 @@ button {
 }
 
 .project-2 {
+  bottom: -18%;
+  left: 37.8%;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -242,4 +246,103 @@ button {
   line-height: normal;
   letter-spacing: 1px;
   text-transform: uppercase;
+}
+
+.footer {
+  position: relative;
+  bottom: -320%;
+  padding: 144px 0 0 0;
+  width: 100%;
+  height: 363px;
+  background: #1D1C1E;
+}
+.footer-box-2 {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.footer-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-title {
+  color: #FFF;
+  font-family: Spartan;
+  margin-left: 16px;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 5px;
+}
+.footer-list {
+  display: flex;
+  align-items: center;
+  gap: 0 42px;
+}
+.footer-link {
+  color: #FFF;
+  font-family: Jost;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 2px;
+}
+.footer-line {
+  opacity: 0.1;
+  background: #FFF;
+  margin-bottom: 31px;
+}
+.footer-title {
+  width: 350px;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  opacity: 0.5;
+}
+.footer-text {
+  opacity: 0.5;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+.footer-bottom-box {
+  display: flex;
+  justify-content: space-between;
+}
+.footer-bottom-text {
+  width: 180px;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  opacity: 0.5;
+  opacity: 0.5;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+.footer-bottom-text-2 {
+  width: 205px;
+  color: #FFF;
+  font-family: Jost;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 26px;
+  /* 162.5% */
+  opacity: 0.5;
 }/*# sourceMappingURL=main.css.map */
