--- a/src/scss/all-blocks/_project-2.scss
+++ b/src/scss/all-blocks/_project-2.scss
@@ -1,4 +1,7 @@
-.project-2 {
+.project-2 {    
+    bottom: -18%;
+    left: 37.8%;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: space-between;
